@@ -33,6 +33,8 @@ v0.4.0
 * Added UNDO and LOCK check to fcopy special command. Added fcopy to gram.y
 * sum special command renamed to fsum
 * csv import now use isnumeric function
+* change in '#' command
+* new @replace string function
 
 v0.3.0
 * FIX when importing large CSV files
